# test_sub

./: README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
docker/entrypoints/: start_airflow_webserver.sh
notebooks/: TA_colab.ipynb
tienda_amiga/: cfg.py  extract.py  load.py  transform.py  transform_jct.py
tienda_amiga/dags/: etl_dag.py  etl_dag_jct.py
tienda_amiga/resources/data/: data_bitcoin_transformed.csv
